# widgets_rs

./: .gitignore  .gitmodules  Cargo.toml  README.adoc  dl-and-unpkg.sh  esbuild.config.js  flake.nix  main.js  package-lock.json  package.json  pkg-and-serve.sh  rebuild.sh  shell-run-only.nix  shell.nix
crates/frontend/: Cargo.toml
crates/frontend/src/: app.rs  holochain_client_wrapper.rs  lib.rs
crates/holochain_client_wrapper_ui/: Cargo.toml
crates/holochain_client_wrapper_ui/src/: app.rs
crates/memez/: Cargo.toml
crates/memez/src/: lib.rs
crates/memez_core/: Cargo.toml
crates/memez_core/src/: lib.rs  types.rs
crates/memez_ui/: Cargo.toml  index.html  main.js
crates/memez_ui/src/: app.rs  js_ser_de.rs  lib.rs
crates/paperz/: Cargo.toml
crates/paperz/src/: lib.rs
crates/paperz_coordinator/: Cargo.toml
crates/paperz_coordinator/src/: lib.rs
crates/paperz_core/: Cargo.toml
crates/paperz_core/src/: lib.rs  types.rs
crates/paperz_integrity/: Cargo.toml
crates/paperz_integrity/src/: lib.rs
crates/paperz_ui/: Cargo.toml  esbuild-we-applet.config.js  esbuild.config.js  index-pre.js  index.html  index.js  main.js
crates/paperz_ui/src/: app.rs  file_upload.rs  js_ser_de.rs  lib.rs
crates/trailz/: Cargo.toml
crates/trailz/src/: lib.rs
crates/trailz_ui/: Cargo.toml  index.html  main.js
crates/trailz_ui/src/: app.rs  bindings.rs  lib.rs
crates/widget_helpers/: Cargo.toml
crates/widget_helpers/src/: file_upload.rs  lib.rs
happs/paperz/: dna.yaml  web-happ.yaml
happs/trailz/: dna.yaml  happ.yaml
nix/: sources.json
src/: app.rs  holochain_client_wrapper.rs  lib.rs  myclass.rs
