[workspace]
members = [
  "crates/holochain_client_wrapper/holochain_client_wrapper",
  "crates/holochain_client_wrapper/macros",
  "crates/holochain_client_wrapper_ui",
  "crates/widget_helpers",
  "crates/memez",
  "crates/memez_ui",
  "crates/paperz",
  "crates/paperz_ui",
  "crates/trailz",
  "crates/trailz_ui",
]
