[package]
name = "paperz_ui"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
weblog = "0.3.0"
yew = "0.19.3"

holochain_client_wrapper = { path = "../holochain_client_wrapper" }
paperz_core = { path = "../paperz_core" }
widget_helpers = { path = "../widget_helpers" }

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlInputElement",
]
