[package]
name = "paperz_ui"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.13.0"
js-sys = "0.3.59"
wasm-bindgen = "0.2"
weblog = "0.3.0"
yew = "0.19.3"

social_sensemaker_core = { git = "https://github.com/neighbour-hoods/social_sensemaker.git", rev = "19753e03347ab6cf13e9165afc8909bfc33fac76" }

holochain_client_wrapper = { path = "../holochain_client_wrapper/holochain_client_wrapper" }
paperz_core = { path = "../paperz_core" }
widget_helpers = { path = "../widget_helpers" }

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlInputElement",
]
