[package]
name = "widget_helpers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
gloo = "0.8"
js-sys = "0.3.59"
wasm-bindgen = "0.2"
weblog = "0.3.0"
yew = "0.19.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlInputElement",
]

holochain_client_wrapper = { path = "../holochain_client_wrapper/holochain_client_wrapper" }
